added amunition and a better invetory browser to go along with it